# shakespeare

./: .gitignore  Cargo.toml  README.md  clippy.toml_  roundtrip_notes.md  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: build.yml  release.yml  rust.yaml  rust.yml
examples/: chat.rs
shakespeare-example/: Cargo.toml
shakespeare-example/src/: main.rs
shakespeare-macro/: Cargo.toml
shakespeare-macro/src/: interfacerewriter.rs  lib.rs  macros.rs
shakespeare-macro/src/data/: actor_name.rs  data_item.rs  data_name.rs  handler_functions.rs  mod.rs  role_name.rs  signature_ext.rs
shakespeare-macro/src/declarations/: actor.rs  mod.rs  performance.rs  role.rs
shakespeare-macro/src/outputs/: actor.rs  actor_role_perf.rs  actor_struct.rs  dispatch_core_fn.rs  mod.rs  payload_enum.rs  perfdispatch.rs  role.rs  self_getter.rs  spawning_function.rs
shakespeare-macro/src/outputs/actor/: actor_struct.rs  mod.rs  self_getter.rs  spawning_function.rs
shakespeare-macro/src/outputs/performance/: actor_role_perf.rs  dispatch_core_fn.rs  mod.rs
shakespeare-macro/src/outputs/role/: mod.rs  payload_enum.rs
shakespeare-macro/tests/: mod.rs
shakespeare-macro/tests/successes/: accepts.rs  basic.rs  mod.rs  modules.rs  returns.rs  stream.rs  supervisor.rs
src/: core.rs  lib.rs  returnval.rs  sendable.rs  test.rs  tokio.rs
src/core/: actor.rs  context.rs  mod.rs  returnval.rs  role.rs
tests/: mod.rs
tests/fails/: empty.rs  empty.stderr  missing_data.rs  missing_data.stderr  multiple_data.rs  multiple_data.stderr
tests/successes/: basic.rs  mod.rs  modules.rs  returns.rs  stream.rs  supervisor.rs
xtask/: Cargo.toml  build.rs
xtask/src/: expander.rs  main.rs
xtask/tests/: mod.rs
