[package]
name = "shakespeare"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "An actor framework"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["async", "macro", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "shakespeare-macro", "xtask"]

[workspace.package]
version = "0.1.0-rc1"
authors = ["Ewan Mount"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ejmount/shakespeare"
edition = "2024"


[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["macros", "full"] }
shakespeare-macro = { path = "shakespeare-macro", version = "0.1.0-rc1" }
futures = "0.3.31"
trait-variant = "0.1.2"
pin-project = "1.1.10"


[dev-dependencies]
trybuild = "1.0.112"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio = { version = "1.48.0", features = ["net"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["net"] }
