[package]
name = "shakespeare-example"
version = "0.0.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tokio-util = { version = "0.7.16", features = ["codec"] }
shakespeare = { path = ".." }
tokio = { version = "1.47.1", features = ["net"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["net"] }
