[package]
name = "shakespeare-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A support crate for the shakespeare actor framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "fold", "extra-traits"] }
convert_case = "0.8.0"
itertools = "0.14.0"
structmeta = "0.3.0"
visibility = "0.1.1"

[dev-dependencies]
futures = "0.3.31"
runtime-macros = "1.1.1"
shakespeare = { path = ".." }
tokio = "1.48.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.16", features = ["codec", "net"] }
