[package]
name = "xtask"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xtask"

[dependencies]
anyhow = "1"
clap = { version = "4.3.22", features = ["derive"] }
duct = "0.13.6"
colored = "2.0.4"
fs_extra = "1.3.0"
open = "5.0.0"
dialoguer = "0.11.0"
syn = { version = "2.0.60", features = ["full", "fold", "visit", "extra-traits"] }
proc-macro2 = "1.0.81"
quote = "1.0.36"
itertools = "0.12.1"
convert_case = "0.6.0"
structmeta = "0.3.0"
walkdir = "2.5.0"
visibility = "0.1.0"

[build-dependencies]
walkdir = "2.5.0"

[dev-dependencies]
shakespeare = { path = ".." } # Doesn't need a version because this crate isn't published
trybuild = "1.0.91"
futures = "0.3.30"
tokio = "1.37.0"