[package]
name = "xtask"
version = "0.0.0" # Don't want to publish this
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xtask"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
duct = "0.13.7"
colored = "2.1.0"
fs_extra = "1.3.0"
open = "5.3.0"
dialoguer = "0.12.0"
syn = { version = "2.0.79", features = ["full", "fold", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0.87"
quote = "1.0.37"
itertools = "0.13.0"
convert_case = "0.6.0"
structmeta = "0.3.0"
walkdir = "2.5.0"
visibility = "0.1.1"

[build-dependencies]
walkdir = "2.5.0"

[dev-dependencies]
shakespeare = { path = ".." } # Doesn't need a version because this crate isn't published
trybuild = "1.0.99"
tokio = "1.40.0"
runtime-macros = "1.1.0"
futures = "0.3.31"
